// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an ALB with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_security_group\\": {
      \\"testALB_alb_security_group_57C45F23\\": {
        \\"description\\": \\"External security group  (Managed by Terraform)\\",
        \\"egress\\": [
          {
            \\"fromPort\\": 0,
            \\"protocol\\": \\"-1\\",
            \\"toPort\\": 0,
            \\"cidrBlocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6CidrBlocks\\": [],
            \\"prefixListIds\\": [],
            \\"securityGroups\\": [],
            \\"self\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null
          }
        ],
        \\"ingress\\": [
          {
            \\"fromPort\\": 443,
            \\"toPort\\": 443,
            \\"protocol\\": \\"TCP\\",
            \\"cidrBlocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          },
          {
            \\"fromPort\\": 80,
            \\"toPort\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidrBlocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"name_prefix\\": \\"test--HTTP/S Security Group\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\",
          \\"Name\\": \\"test--HTTP/S Security Group\\"
        },
        \\"vpc_id\\": \\"123\\",
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testALB/alb_security_group\\",
            \\"uniqueId\\": \\"testALB_alb_security_group_57C45F23\\"
          }
        }
      }
    },
    \\"aws_alb\\": {
      \\"testALB_alb_F6B33218\\": {
        \\"internal\\": false,
        \\"name_prefix\\": \\"TEST\\",
        \\"security_groups\\": [
          \\"\${aws_security_group.testALB_alb_security_group_57C45F23.id}\\"
        ],
        \\"subnets\\": [
          \\"a\\",
          \\"b\\"
        ],
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testALB/alb\\",
            \\"uniqueId\\": \\"testALB_alb_F6B33218\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders an ALB without tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_security_group\\": {
      \\"testALB_alb_security_group_57C45F23\\": {
        \\"description\\": \\"External security group  (Managed by Terraform)\\",
        \\"egress\\": [
          {
            \\"fromPort\\": 0,
            \\"protocol\\": \\"-1\\",
            \\"toPort\\": 0,
            \\"cidrBlocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6CidrBlocks\\": [],
            \\"prefixListIds\\": [],
            \\"securityGroups\\": [],
            \\"self\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null
          }
        ],
        \\"ingress\\": [
          {
            \\"fromPort\\": 443,
            \\"toPort\\": 443,
            \\"protocol\\": \\"TCP\\",
            \\"cidrBlocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          },
          {
            \\"fromPort\\": 80,
            \\"toPort\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidrBlocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"name_prefix\\": \\"test--HTTP/S Security Group\\",
        \\"tags\\": {
          \\"Name\\": \\"test--HTTP/S Security Group\\"
        },
        \\"vpc_id\\": \\"123\\",
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testALB/alb_security_group\\",
            \\"uniqueId\\": \\"testALB_alb_security_group_57C45F23\\"
          }
        }
      }
    },
    \\"aws_alb\\": {
      \\"testALB_alb_F6B33218\\": {
        \\"internal\\": false,
        \\"name_prefix\\": \\"TEST\\",
        \\"security_groups\\": [
          \\"\${aws_security_group.testALB_alb_security_group_57C45F23.id}\\"
        ],
        \\"subnets\\": [
          \\"a\\",
          \\"b\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testALB/alb\\",
            \\"uniqueId\\": \\"testALB_alb_F6B33218\\"
          }
        }
      }
    }
  }
}"
`;
